Demo: Prevent viewport overflow on Mobile Safari.

--- a/css/demo.css
+++ b/css/demo.css
@@ -87,6 +87,7 @@ textarea {
 }
 input[type='file'] {
   padding: inherit;
+  max-width: 100%;
 }
 
 @media (prefers-color-scheme: light) {
